--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+body{
+  @apply flex flex-col min-h-screen
+}
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -24,4 +28,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
